--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     Router.add(/^$/, function() {
         console.log(Router.getFragment());
         document.getElementsByTagName('post')[0].innerHTML = "";
-        document.getElementById('meta').remove();
     });
     Router.config({
         mode: 'history'
@@ -91,7 +90,7 @@
     <h1><a href="#" onclick="Router.navigate();"><img src="assets/shlog.png" alt="Shlog.js"></a></h1>
     <article>
         <h2 id="article-title"></h2>
-        <div id="meta">Posted on <time></time> by <author></author></div>
+        Posted on <time></time> by <author></author>
         <post>This is the area where the articles will be printed.</post>
     </article>
     <div id="link-farm"></div>
