--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- <html manifest="shlog.appcache"> -->
-<html>
+<html manifest="shlog.appcache">
+<!-- <html> -->
 
 <head>
     <meta charset="utf-8">
